syntax = "proto3";

package user;

import "user_engagement.proto";



message User {
  int32 user_id = 1;
  string username = 2;
  user_engagement.UserEngagement engagement = 3;
}